[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/SideButtons.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="Theme" id=2]
Button/styles/normal = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="SideButtons" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="left" type="Button" parent="HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.266667 )
margin_right = 50.0
margin_bottom = 432.0
rect_min_size = Vector2( 50, 0 )
theme = SubResource( 2 )

[node name="tap" type="Button" parent="HBoxContainer"]
margin_left = 54.0
margin_right = 378.0
margin_bottom = 432.0
size_flags_horizontal = 3
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 6 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 3 )

[node name="right" type="Button" parent="HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.266667 )
margin_left = 382.0
margin_right = 432.0
margin_bottom = 432.0
rect_min_size = Vector2( 50, 0 )
theme = SubResource( 2 )

[connection signal="pressed" from="HBoxContainer/left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="HBoxContainer/tap" to="." method="_on_tap_pressed"]
[connection signal="pressed" from="HBoxContainer/right" to="." method="_on_right_pressed"]
